--- a/tox.ini
+++ b/tox.ini
@@ -6,5 +6,6 @@ whitelist_externals=make
 deps =
     -rrequirements.txt
     -rtests/requirements.txt
-commands = make test
-passenv=TEST_CONTRIB
+
+commands =  flake8
+            py.test -v tests --cov=exporters_bloom_filter --cov-report term-missing
